front/style.css
*{
    padding: 0;
    margin: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
  }
  body{
    font-family: Arial, Helvetica, sans-serif;
    background-color: #ceeaff;
    justify-content: center;
    height: 100vh;
    margin: 0;
    transition: background 0.3s linear;
  }
  /*------------------------------Nav bar----------------------------------------------*/
  nav{
    background: #0082e6;
    height: 80px;
    width: 100%;
    box-shadow: 0 1px 10px rgba(0,0,0,0.5), 0 0 40px rgba(0,0,0,0.2) inset;
    position: sticky;
    position: -webkit-sticky;
    top:0;
    z-index: 1;
  }
  .mod{
    margin-left: 10px;
  }
  label.logo{
    color: white;
    font-size: 35px;
    line-height: 80px;
    padding: 0 100px;
    font-weight: bold;
  }
  nav ul{
    float: right;
    margin-right: 20px;
  }
  nav ul li{
    display: inline-block;
    line-height: 80px;
    margin: 0 5px;
  }
  nav ul li a{
    color: white;
    font-size: 17px;
    padding: 7px 13px;
    border-radius: 3px;
    text-transform: uppercase;
  }
  a.active,a:hover{
    background: #1b9bff;
    transition: .5s;
  }
  .checkbtn{
    font-size: 30px;
    color: white;
    float: right;
    line-height: 80px;
    margin-right: 40px;
    cursor: pointer;
    display: none;
  }
  #check{
    display: none;
  }
  @media (max-width: 952px){
    label.logo{
      font-size: 30px;
      padding-left: 50px;
    }
    nav ul li a{
      font-size: 16px;
    }
  }
  @media (max-width: 858px){
    .checkbtn{
      display: block;
    }
    ul{
      position: fixed;
      width: 100%;
      height: 100vh;
      background: #2c3e50;
      top: 80px;
      left: -100%;
      text-align: center;
      transition: all .5s;
    }
    nav ul li{
      display: block;
      margin: 50px 0;
      line-height: 30px;
    }
    nav ul li a{
      font-size: 20px;
    }
    a:hover,a.active{
      background: none;
      color: #0082e6;
    }
    #check:checked ~ ul{
    left: 0;
    }
    .mod{
      margin-left: 46%;
    } 
  }
  
  /*------------------------Dark mode--------------------------------------*/
  @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
  
  body.dark {
      background: #0f1d2a;
      color: #fffafa;
      /*011428*/
  }
  
  .checkbox {
      opacity: 0;
      position: absolute;
  }
  
  .label {
      background-color: #111;
      border-radius: 50px;
      cursor: pointer;
      display: flex;
      align-items: center;
      justify-content: space-between;
      padding: 5px;
      position: relative;
      height: 26px;
      width: 50px;
      transform: scale(1.5);
  }
  
  .label .ball {
      background-color: #fff;
      border-radius: 50%;
      position: absolute;
      top: 2px;
      left: 2px;
      height: 22px;
      width: 22px;
      transform: translateX(0px);
      transition: transform 0.2s linear;
  }
  
  .checkbox:checked + .label .ball {
      transform: translateX(24px);
  }
  
  .fa-moon {
      color: #f1c40f;
  }
  
  .fa-sun {
      color: #f39c12;
  }

  nav.darknav {

    background: #010911;

    /*011428*/

  }

  .darkforma {
  width: 70%;
  margin: 0 auto;
  margin-top: 50px;
  background-color: #010911;
  /*border: 3px solid #25237a;*/
  filter: drop-shadow(10px 10px 10px #0d2d4b);
  padding: 20px;
  }

  .darkadd-button {
    display: block;
    width: 250px;
    height: 60px;
  
    background-color:#010911 ;
    border: 5px solid #ceeaff;
    outline: none;
  
    font-size: 25px ;
    font-weight: 800;
    margin: 0 auto;
    margin-top: 20px;
    margin-bottom: 10px;
    padding: 5px;
    
    color: #ceeaff;
  
    transition: all 0.25s ease;
  }

  .darkadd-button:hover {
    background-color:#ceeaff;
    color: #010911;
  }

  /*----------------------------------Promena logoa---------------------------------------*/
  .logo{
    margin: 3px 0px 0px 10px;
  }
  .logo2{
    margin: 3px 0px 0px 10px;
  }
  .logo3{
    margin: 2px 0px 0px 8px;
  }
  #logo {
    width:auto;
  }
  
  #logo img {
    position:absolute;
    left:0;
    -webkit-transition: opacity 0.3s ease-in-out;
    -moz-transition: opacity 0.3s ease-in-out;
    -o-transition: opacity 0.3s ease-in-out;
    transition: opacity 0.3s ease-in-out;
  }
  
  #logo img.logo:hover {
    opacity:0;
  }
/*-------------------------------------OBJAVI------------------------------------------*/
.forma {
  width: 70%;
  margin: 0 auto;
  margin-top: 50px;
  background-color: #0082e6;
  filter: drop-shadow(10px 10px 10px #0d2d4b);

  padding: 20px;
  
}

.form-title {
  margin: 0;
  text-align: center;
  color: #ceeaff;
  font-size: 35px;
}

.form-categ {
  margin: 0;
  color:  #ceeaff;
}

.form-1{
  margin: 10px 0px 5px 0px;
  color:  #ceeaff;
}
.tip1{
  font-size: 20px;
  font-weight: bold;
  color: #003566;
  padding: 5px;
  background-color: #ceeaff;
  border: 2px solid #003566;
  width: 225px;
  margin: 0px;
}
.tip-div{
  display: inline-flex;
  text-align: center;
  margin-bottom: 10px;
}
.tip{
  margin: 10px 0px 0px 10px;
  width: 20px;
  height: 20px;
  color: #ceeaff;
}
.sadrzaj{
  overflow-y: scroll;
  background-color: #ceeaff;
  color: #003566;
  font-size: 25px;
  padding: 5px;
  border: 2px solid #003566;
}
.vreme{
  background-color: #ceeaff;
  color: #003566;
  font-weight: bold;
  font-size: 25px;
  padding: 5px;
  border: 2px solid #003566;
  width: flex;
}
.add-input {
  width: 100%;
  font-size: 25px;
  outline: none;
  padding: 5px;
  background-color: #ceeaff;
  border: 2px solid #003566;
  color: #003566;
}

.add-button {
  display: block;
  width: 250px;
  height: 60px;

  background-color:#0082e6 ;
  border: 5px solid #ceeaff;
  outline: none;

  text-align: center;
  font-size: 25px ;
  font-weight: 800;
  margin: 0 auto;
  margin-top: 20px;
  margin-bottom: 10px;
  padding: 5px;
  
  color: #ceeaff;

  transition: all 0.25s ease;
}

.add-button:hover {
  background-color:#ceeaff;
  color: #0082e6;
}
/* ... */

